[tool.poetry]
name = "dungeon-generator"
version = "0.1.0"
description = ""
authors = ["Sami Heinimo <sami.heinimo@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
