[tool.poetry]
name = "dungeon-generator"
version = "0.1.0"
description = ""
authors = ["Sami Heinimo <sami.heinimo@helsinki.fi>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.4"
matplotlib = "^3.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pylint = "^3.3.5"
networkx = "^3.4.2"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["^src/tests/"]
